[package]
name = "motap2"
version = "0.1.0"
authors = ["tmrob <tmr463@uowmail.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.10.0"
#permutohedron = "0.2.4"
ndarray = "0.14.0"
ordered-float = "2.0.1"
petgraph = "0.5.1"
minilp = "0.2.2"
criterion = "0.3.3"
serde = {version = "1.0.117", features= ["derive"] }
serde_json = "1.0.59"
clap = "2.*"
#lazy_static = "1.4.0"
regex = "1.4.5"

[lib]
name="lib"
path="src/lib.rs"

[[bin]]
name = "motap"
path = "src/main.rs"

[[bench]]
name="benchmark"
harness = false
path = "src/benchmark.rs"